# cookiephone.github.io

./: .eleventy.js  .gitignore  CNAME  Cargo.toml  _config.yml  build.py  build_wasm.py  index.html  index.md  package-lock.json  package.json  projects.html  resources.html  sitegraph.py
.github/workflows/: deploy.yml
covers/: index.html
css/: main.css
html/: fonts.html  icons.html
posts/2025-03-10/: index.html
posts/2025-04-05/: index.html
posts/2025-06-20/: index.html
posts/2025-07-29/: index.html
posts/2025-09-01/: index.html
posts/post1/: index.html
src/: CNAME  covers.njk  index.njk
src/_includes/: base-layout.njk  post-layout-jp.njk  view-switch.njk
src/css/: main.css
src/posts/: 2025-03-10.md  2025-04-05.md  2025-06-20.md  2025-07-29.md  2025-09-01.md
src/static/css/: main.css
wasm-blocks/graph/: .gitignore  Cargo.toml
wasm-blocks/graph/shaders/edge/: frag.glsl  vert.glsl
wasm-blocks/graph/shaders/node/: vert.glsl
wasm-blocks/graph/src/: lib.rs
wasm/graph/: graph.js  graph_bg.wasm
