[package]
name = "graph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlUniformLocation", "WebGlBuffer", "console"] }
js-sys = "0.3"
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
